Breadcrumb align fix

--- a/Portal-do-Aluno/CSS/layout.css
+++ b/Portal-do-Aluno/CSS/layout.css
@@ -226,8 +226,8 @@ a{
 
 .breadcrumb{
     font-size: .8em;
-    color:#6b6b6b;
-    padding:10px 0 20px 0;
+    color: #626262;
+    padding: 20px 0;
     text-decoration: underline;
 }
 
